@@ -5,4 +5,5 @@ public class DeeBuilder__Accessor {
 	public static void setTestsMode(boolean value) {
 		DeeProjectBuilder.TESTSMODE = value;
 	}
+	
 }
