@@ -1,9 +1,9 @@
 package mmrnmhrm.tests;
 
 public interface ITestDataConstants {
-
+	
 	public static final String SAMPLE_SRC1 = "sampleSrc1";
 	public static final String SAMPLE_SRC3 = "sampleSrc3";
 	public static final String BUILD_SRC = "buildSrc";
-
+	
 }
